# nyra

./: .editorconfig  .env.example  .gitignore  .mailmap  .rustfmt.toml  Bot.cs  Cargo.toml  Program.cs  README.adoc  TODO.org  TerryDavis.csproj  bacon.toml  deps.json  deps.jsonc  flake.nix  hr.nu  nyra.csproj  nyra.example.toml  nyra.sln  nyra.slnx  typos.toml
Commands/: BanCommand.cs  ColourCommand.cs  CommandHandler.cs  DeworkmaniseCommand.cs  HelpCommand.cs  HostCommand.cs  InfoCommand.cs  KickCommand.cs  PingCommand.cs  PurgeCommand.cs  UnbanCommand.cs
Commands/Information/: HelpCommand.cs  HostCommand.cs  InfoCommand.cs  TestCommand.cs
Commands/Moderation/: BanCommand.cs  KickCommand.cs  PurgeCommand.cs  UnbanCommand.cs
Commands/Utilities/: ColourCommand.cs  DeworkmaniseCommand.cs  InfoCommand.cs  PingCommand.cs
Config/: BotConfig.cs
Data/: pantone.jsonc
HardwareInfo/: Cargo.toml  Wrapper.cs
HardwareInfo/src/: lib.rs
HardwareInfo/src/mods/: linux.rs  macos.rs  mod.rs  windows.rs
Utils/: BotConfig.cs  Colourise.cs  Stdout.cs
WindowPlatform/: Cargo.toml  Wrapper.cs
WindowPlatform/.cargo/: config.toml
WindowPlatform/src/: lib.rs
WindowPlatform/src/theme/: mod.rs
WindowPltaform/: Cargo.toml  Wrapper.cs
WindowPltaform/src/: lib.rs
crates/nyra/: Cargo.toml  LICENSE
crates/nyra/src/: arg_parser.rs  bot_launcher.rs  help_msg.txt  main.rs  nyra_main.rs  term_utils.rs
crates/nyra/src/commands/: mod.rs
crates/nyra/src/commands/information/: help.rs
crates/nyra/src/commands/information/host/: host_helper.rs  macos.rs  mod.rs
crates/nyra/src/commands/moderation/: ban.rs  purge.rs  unban.rs
crates/nyra/src/commands/utilities/: ping.rs
crates/nyra/src/utils/: arg_parser.rs  mod.rs
crates/nyra_commands/: Cargo.toml
crates/nyra_commands/src/: helper.rs  lib.rs
crates/nyra_commands/src/information/: age.rs  bot.rs  help.rs  mod.rs
crates/nyra_commands/src/information/host/: host_helper.rs  linux.rs  macos.rs  mod.rs  tests.rs  unknown.rs  windows.rs
crates/nyra_commands/src/maths/: armstrong.rs  hex.rs  int.rs  mod.rs  prime.rs  random.rs  uuid.rs
crates/nyra_commands/src/moderation/: ban.rs  kick.rs  mod.rs  purge.rs  unban.rs
crates/nyra_commands/src/utilities/: mod.rs  ping.rs
crates/nyra_config/: Cargo.toml
crates/nyra_config/src/: error.rs  lib.rs  load.rs  model.rs  path.rs  validate.rs
crates/nyra_core/: Cargo.toml
crates/nyra_core/src/: config.rs  lib.rs
crates/nyra_gui/: Cargo.toml
crates/nyra_gui/src/: lib.rs  theme.rs
crates/nyra_utils/: Cargo.toml
crates/nyra_utils/src/: arg_parser.rs  colorize.rs  lib.rs  log.rs
crates/poise/: Cargo.toml  LICENSE-MIT.txt
crates/poise/macros/src/: util.rs
crates/poise/src/: lib.rs  track_edits.rs
crates/poise/src/builtins/: help.rs  mod.rs  register.rs
crates/poise/src/dispatch/: common.rs  mod.rs  prefix.rs
crates/poise/src/framework/: builder.rs  mod.rs
crates/poise/src/reply/: builder.rs
crates/poise/src/slash_argument/: slash_macro.rs
crates/poise/src/structs/: command.rs  framework_error.rs  prefix.rs  slash.rs
crates/poise_macros/: Cargo.toml
crates/poise_macros/src/command/: mod.rs  slash.rs
docs/development/: mwvs.adoc  terminal.adoc  troubleshooting.adoc  wterminal.adoc
docs/setup/: configuration.adoc  dependencies.adoc
poise/: Cargo.toml  README.md
poise/macros/: Cargo.toml
poise/macros/src/: lib.rs
poise/macros/src/command/: mod.rs  prefix.rs  slash.rs
poise/src/: lib.rs
poise/src/builtins/: mod.rs
poise/src/dispatch/: mod.rs  prefix.rs  slash.rs
poise/src/framework/: mod.rs
poise/src/reply/: builder.rs  mod.rs
poise/src/structs/: command.rs  context.rs  framework_error.rs
src/: bot_launcher.rs  config.rs  main.rs  utils.rs
src/Commands/: CommandHandler.cs
src/Commands/Information/: InfoCommand.cs
src/Commands/Moderation/: KickCommand.cs
src/Commands/Utilities/: PingCommand.cs
src/Commands_old/Information/: HelpCommand.cs  HostCommand.cs
src/Commands_old/Moderation/: BanCommand.cs
src/HardwareInfo/: Wrapper.cs
src/HardwareInfo/src/: lib.rs
src/HardwareInfo/src/mods/: linux.rs  macos.rs  windows.rs
src/Utils/: BotConfig.cs  Colourise.cs
src/WindowPlatform/.cargo/: config.toml
src/WindowPlatform/src/: lib.rs
src/WindowPlatform/src/theme/: mod.rs
src/commands/: helper.rs  mod.rs
src/commands/information/: age.rs  help.rs  host.rs  mod.rs  ping.rs
src/commands/information/host/: host_helper.rs  macos.rs  mod.rs  tests.rs  unknown.rs  windows.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  purge.rs  unban.rs
src/commands/utilities/: ping.rs
src/utils/: arg_parser.rs  clap.rs  clap_prints.rs  colorize.rs  log.rs  mod.rs
src/window_platform/: mod.rs  theme.rs
src/window_platform/theme/: mod.rs
