[dependencies]
chrono = "0.4.42"
gpui = {version = "0.2.2", optional = true, features = ["runtime_shaders"]}
inventory = "0.3.21"
poise = {path = "./poise"}
serde = "1.0.228"
tokio = {version = "1.48.0", features = ["rt", "macros", "rt-multi-thread", "sync"]}
toml = "0.9.8"

[package]
name = "nyra"
version = "1.0.0"
description = "A discord bot"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[features]
default = ["gui"]
gui = ["gpui"]
cli = []
only-gui = ["gui"]
only-cli = ["cli"]

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.17.3"
