[workspace]
resolver = "2"
members = [
  "crates/poise",
  "crates/nyra"
]
default-members = ["crates/nyra"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
inventory = "0.3.21"
serde = "1.0.228"
chrono = "0.4.42"
toml = "0.9.8"
wmi = "0.17.3"

[workspace.dependencies.poise]
path = "crates/poise"

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["rt", "macros", "rt-multi-thread", "sync"]
