[dependencies]
os_info = "3.12.0"
rand = "0.8.5"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg( target_os = "windows" )'.dependencies]
windows = "0.62.1"

[lib]
name = "hardwareinfo"
crate-type = ["dylib"]

[package]
name = "hardwareinfo"
version = "0.1.0"
edition = "2024"
