[dependencies]
os_info = "3.12.0"
rand = "0.8.5"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
wmi = "0.17.3"

[target.'cfg( target_os = "windows" )'.dependencies]
windows = { version="0.56.0", features=["Win32_Foundation", "Win32_System", "Win32_System_Registry"] }

[lib]
name = "hardwareinfo"
crate-type = ["dylib"]

[package]
name = "hardwareinfo"
version = "0.1.0"
edition = "2024"
