[dependencies]
chrono.workspace = true
inventory.workspace = true
nyra-utils.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
meval.workspace = true
poise.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
toml.workspace = true

[package]
name = "nyra-commands"
version = "1.1.0"
description = "Bot commands for Nyra"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
