[dependencies]
chrono.workspace = true
inventory.workspace = true
nyra-config.workspace = true
nyra-utils.workspace = true
compile-time.workspace = true
pretty-duration.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
evalexpr.workspace = true
mongodb.workspace = true
# meval.workspace = true
poise.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
toml.workspace = true

[package]
name = "nyra-commands"
repository = "https://gitlab.com/invra/nyra.git"
version = "2.0.3"
description = "Bot commands for Nyra"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
