[dependencies]
nyra-utils.workspace = true
serde.workspace = true
toml.workspace = true

[features]
default = ["gui"]
gui = []
cli = []
only-gui = ["gui"]
only-cli = ["cli"]

[package]
name = "nyra-config"
version = "2.1.0"
description = "Configuration handler for Nyra"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
