[dependencies]
inventory.workspace = true
nyra-commands.workspace = true
nyra-config.workspace = true
nyra-utils.workspace = true
mongodb.workspace = true
poise.workspace = true
tokio.workspace = true

[features]
default = ["gui"]
gui = []
cli = []
only-gui = ["gui"]
only-cli = ["cli"]

[package]
name = "nyra-core"
version = "1.0.0"
description = "Core functionalities of Nyra"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"
