[features]
default = ["gui"]
gui = []
cli = []
only-gui = ["gui"]
only-cli = ["cli"]

[package]
name = "nyra-utils"
version = "1.2.0"
description = "Nyra's simple utility functions"
license = "Unlicense"
readme = "README.adoc"
keywords = ["discord", "discord-bot", "utility"]
edition = "2024"

[target.'cfg(target_os = "windows")'.dependencies]
wmi.workspace = true
