[dependencies]
tokio.workspace = true
futures-util.workspace = true
poise_macros.workspace = true
async-trait.workspace = true
regex.workspace = true
tracing.workspace = true
derivative.workspace = true
parking_lot.workspace = true
trim-in-place.workspace = true
indexmap.workspace = true
serenity.workspace = true

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
fluent.workspace = true
intl-memoizer.workspace = true
fluent-syntax.workspace = true
rand.workspace = true

[features]
default = ["serenity/rustls_backend", "cache", "chrono", "handle_panics"]
chrono = ["serenity/chrono"]
cache = ["serenity/cache"]
# No-op feature because serenity/collector is now enabled by default
collector = []
# Enables support for handling panics inside commands via FrameworkError::CommandPanic.
# This feature has no overhead and can always be enabled.
# This feature exists because some users want to disable the mere possibility of catching panics at
# build time for peace of mind.
handle_panics = []

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ["cfg(doc_nightly)"]}

[package]
authors = [
  "kangalio <jannik.a.schaper@web.de>",
  "invra <pacstrap@mx.idalon.org>"
]
edition = "2024"
name = "poise"
version = "0.6.2"
description = "A Discord bot framework for serenity"
license = "MIT"
repository = "https://github.com/serenity-rs/poise/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_nightly"]
